--- a/manuscript.tex
+++ b/manuscript.tex
@@ -156,7 +156,7 @@ In order to determine if there is a difference in the gender of authors in compu
 
 To determine the gender of authors, we used the web service Gender-API.com, which curates a database of first names and associated genders from government records as well as social media profiles. Gender-API searches provide information on the likely gender as well as confidence in the estimate based on the number of times a name appears in the database. We used bootstrap analysis to estimate the probability ($P_{female}$) that an author in a particular dataset is female as well as a 95\% confidence interval (see Materials and Methods)
 
-We validated this method by comparing it to a set of 2155 known author:gender pairs from the biomedical literature provided by Filardo et. al.[12] Filardo and colleagues manually determined the genders of the first authors for over 3000 papers by searching for authors’ photographs on institutional web pages or social media profiles like LinkedIn. We used our computational inference of gender for a subset of this data, which suggested $P_{female}$ = 0.373, 95\% CI = [0.350, 0.396], compared to the known gender, which gave $P_{female}$ = 0.360 (using the same bootstrap analysis, 95\% CI = [0.342, 0.379]) (Supplementary Figure 1C). Because Gender-API does not have information for a subset of names (43\% of unique names in our Biology dataset, representing 26.6\% of authors), these names are excluded from our analysis. In order to ensure that this was not skewing our analysis, we also determined the $P_{female}$ in Filardo et al.'s known gender dataset excluding those authors, giving $P_{female}$ = 0.381, 95\% CI = [.354, 0.409]. Together, these results suggest that our method of automatically assigning gender using Gender-API gives comparable result to hand-curated gender assignment, and that excluding names without clear gender information does not lead us to underestimate the proportion of women in our dataset.
+We validated this method by comparing it to a set of 2155 known author:gender pairs from the biomedical literature provided by Filardo et. al.[12] Filardo and colleagues manually determined the genders of the first authors for over 3000 papers by searching for authors’ photographs on institutional web pages or social media profiles like LinkedIn. We used our computational inference of gender for a subset of this data, which suggested $P_{female}$ = 0.373, 95\% CI = [0.350, 0.396], compared to the known gender, which gave $P_{female}$ = 0.360 (using the same bootstrap analysis, 95\% CI = [0.342, 0.379]) (Supplementary Figure 1C). Unfortunately, 43\% of names used to query to Gender-API did not have associated gender information. These names, representing 26.6\% of authors were therefore excluded from our analysis. In order to ensure that this was not skewing our results, we also determined the $P_{female}$ in Filardo et al.'s known gender dataset excluding those authors with names that were not associated with a Gender-API record, giving $P_{female}$ = 0.381, 95\% CI = [.354, 0.409]. Together, these results suggest that our method of automatically assigning gender using Gender-API gives comparable result to hand-curated gender assignment, and that excluding names without clear gender information does not lead us to underestimate the proportion of women in our dataset.
 
 We began by analyzing the gender representation in primary publications from 1997 to 2014. Consistent with previous publications, women were substantially less likely to be in senior author positions than first author positions in publications labeled with the Biology (Bio) MeSH term (Last author, $P_{female}$ = 0.245, 95\% CI = [0.243, 0.247], First author, $P_{female}$ = 0.376, 95\% CI = [0.373, 0.378]). (Figure 1A, Table 1). We observed the same trend in papers labeled with the computational biology (comp) MeSH term, though the $P_{female}$ at every author position was 4-6  percentage points lower. An analysis of publications by year suggests that the gender gaps in both biology and computational biology are narrowing, but by less than 1 percentage point  per year (for bio, change in $P_{female}$ = 0.0035 / year, 95\% CI = [0.0030, 0.0040]. For comp, change in $P_{female}$ = 0.0049 / year, 95\%CI = [0.0041, 0.0057]). However, the discrepancy between biology and computational biology has been consistent over time (Figure 1B).
 
@@ -212,11 +212,11 @@ comp    & first           & 0.305 & 0.300        & 0.311          & 0.390 & 0.37
 
 Though MeSH terms enable sorting a large number of papers regardless of where they are published, the assignment of these terms is a manual process and may not be comprehensive for all publications. As another way to qualitatively examine gender differences in publishing, we examined different journals, since some journals specialize in computational papers, while others are more general. We looked at the 123  journals that had at least 1000 authors in our bio dataset, and determined $P_{female}$ for each journal separately (Figure 2A). Of these journals, 21 (14\%) have titles indicative of computational biology or bioinformatics, and these journals have substantially lower representation of female authors. The 3 journals with the lowest female representation and 6 out of the bottom 10 are all journals focused on studies using computational methods. Only 4 computational biology/bioinformatics journals are above the median of female representation.
 
-One possible explanation might be that women are less likely to publish in high-impact journals, so we considered the possibility that the differences in the gender of authors that we observe could be the result of differences in impact factor between papers published in biology versus computational biology publications. We therefore compared the $P_{female}$ of authors in each journal with that journal’s 2014 impact factor (Figure 2B). There is a marginal but significant (p = 0.0025) negative correlation between impact factor and gender for the biology dataset (r2 = 0.06, 95\% CI = [0.15, 0.0078]) , consistent with previous studies. By contrast, there is no significant correlation between impact factor and $P_{female}$ in computational biology publications. Further, for journals that have articles labeled with the computational biology MeSH term, the $P_{female}$ for those articles is the same or lower than that for all biology publications in the same journal.
+One possible explanation might be that women are less likely to publish in high-impact journals, so we considered the possibility that the differences in the gender of authors that we observe could be the result of differences in impact factor between papers published in biology versus computational biology publications. We therefore compared the $P_{female}$ of authors in each journal with that journal’s 2014 impact factor (Figure 2B). There is a marginal but significant (p = 0.0025) negative correlation between impact factor and gender for the biology dataset (r2 = 0.06, 95\% CI = [0.15, 0.0078]), consistent with previous studies. By contrast, there is no significant correlation between impact factor and $P_{female}$ in computational biology publications. Further, for journals that have articles labeled with the computational biology MeSH term, the $P_{female}$ for those articles is the same or lower than that for all biology publications in the same journal. Taken together, these data suggest that the authors of computational biology papers are less likely to be women than the authors of biology papers generally.
 
-Taken together, these data suggest that the authors of computational biology papers are less likely to be women than the authors of biology papers generally. However, since Pubmed does not index computer science publications, we cannot compare computational biology to computer science. Instead, we turned to data from arXiv, a preprint repository for academic papers used frequently by quantitative fields like mathematics and physics. These preprint records cannot be directly compared to peer-reviewed publications indexed on pubmed, but a “quantitative biology” section was added to arXiv in 2003. There are relatively few papers preprints prior to 2007, so we compared preprints in “quantitative biology” to those in “computer science” from 2007-2016.
+We turned next to an investigation of computational biology relative to computer science. Since Pubmed does not index computer science publications, we cannot compare the computational biology dataset to computer science research papers directly. Instead, we investigated the gender balance of authors of manuscripts submitted to arXiv, a preprint repository for academic papers used frequently by quantitative fields like mathematics and physics. These preprint records cannot be compared to peer-reviewed publications indexed on pubmed, but a “quantitative biology” section was added to arXiv in 2003. There are relatively few papers preprints prior to 2007, so we compared preprints in “quantitative biology” to those in “computer science” from 2007-2016.
 
-Women were more likely to be authors in quantitative biology than in computer science in first, second, and middle author positions (Figure 3A, Table 3), though the conventions for determining author order are not necessarily the same in computer science. Nevertheless, women had higher representation in quantitative biology than in computer science for all years except 2009 (Figure 3B). Interestingly, there is a slight but significant (p < 0.05) increase in the proportion of female authors over time in quantitative biology, while there’s no significant increase in computer science preprints.
+Women were more likely to be authors in quantitative biology manuscripts than in computer science manuscripts in first, second, and middle author positions (Figure 3A, Table 3). We found no significant difference in the frequency of female authors in the last or penultimate author positions in these two datasets, though the conventions for determining author order are not necessarily the same in computer science as in biology. Nevertheless, women had higher representation in quantitative biology than in computer science for all years except 2009 (Figure 3B). Interestingly, there is a slight but significant (p < 0.05) increase in the proportion of female authors over time in quantitative biology, while there’s no significant increase in computer science preprints.
 
 \begin{table}[]
 \centering
@@ -252,26 +252,26 @@ Since biology attracts more women than computer science, we suspect that many wo
 \subsection*{Datasets}
 
 \subsubsection*{Biology publications 1997-2014 (bio)}
-This dataset [13] contains all English language publications under the MeSH term "Biology" published between 1997 and 2014, excluding many non-primary sources. Downloaded 12 February, 2016. Search term: ("Biology"[Mesh]) NOT (Review[ptyp] OR Comment[ptyp] OR Editorial[ptyp] OR Letter[ptyp] OR Case Reports[ptyp] OR News[ptyp] OR "Biography" [Publication Type]) AND ("1997/01/01"[PDAT] : "2014/12/31"[PDAT]) AND english[language]
+This dataset [13] contains all English language publications under the MeSH term "Biology" published between 1997 and 2014, excluding many non-primary sources. This set contains 204,767 records. Downloaded 12 February, 2016. Search term: ("Biology"[Mesh]) NOT (Review[ptyp] OR Comment[ptyp] OR Editorial[ptyp] OR Letter[ptyp] OR Case Reports[ptyp] OR News[ptyp] OR "Biography" [Publication Type]) AND ("1997/01/01"[PDAT] : "2014/12/31"[PDAT]) AND english[language]
 
 \subsubsection*{Computational biology publications 1997-2014 (comp)}
-Same as above [13], except using MeSH term "Computational Biology". Only uses papers where this is is a major term. Date range was selected because this MeSH term was introduced in 1997. Downloaded 12 February, 2016. Search term: ("Computational Biology"[Majr]) NOT (Review[ptyp] OR Comment[ptyp] OR Editorial[ptyp] OR Letter[ptyp] OR Case Reports[ptyp] OR News[ptyp] OR "Biography" [Publication Type]) AND ("1997/01/01"[PDAT] : "2014/12/31"[PDAT]) AND english[language]
+Same as above [13], except using MeSH term "Computational Biology". Only uses papers where this is is a major term. Date range was selected because this MeSH term was introduced in 1997. This dataset is a subset of the “bio” dataset; in other words all of the papers in this dataset are contained within “bio," and contains 43,198 records. Downloaded 12 February, 2016. Search term: ("Computational Biology"[Majr]) NOT (Review[ptyp] OR Comment[ptyp] OR Editorial[ptyp] OR Letter[ptyp] OR Case Reports[ptyp] OR News[ptyp] OR "Biography" [Publication Type]) AND ("1997/01/01"[PDAT] : "2014/12/31"[PDAT]) AND english[language]
 
 \subsubsection*{Medical Papers}
 Subset of author and gender data from Filardo et.al [12]. This dataset did not contain author first names or unique publication identifiers. We searched pubmed for the title, author and publication date, and were able to identify 2155/3153 publications to analyze. Publications with no matching search results or with multiple matching search results were excluded.
 
 \subsubsection*{arXiv Quantitative Biology (q-bio)}
-This dataset [14] contains all preprints with the label “q-bio” from 2003 (when the section was introduced) to 2014. Downloaded on 10 June, 2016.
+This dataset [14] contains all preprints with the label “q-bio” from 2003 (when the section was introduced) to 2014. This set contains 41,637 records and was downloaded on 10 June, 2016.
 
 \subsubsection*{arXiv CS (cs)}
-This dataset [14] contains all preprints with the label “cs” from 2003 to 2014. Downloaded on 10 June, 2016.
+This dataset [14] contains all preprints with the label “cs” from 2003 to 2014, and contains 188,617 records. Downloaded on 10 June, 2016. There are 1412 preprints that are found in both the qbio and cs dataset (3.4\% of bio and 0.75\% of cs).
 
 \subsection*{Gender Inference}
 Genders were determined using Gender-API (http://gender-api.com), which compares first names to a database compiled from government sources as well as from crawling social media profiles and returns a gender probability and a measure of confidence based on the number of times the name appears in the database. The API was queried with the 74,760 unique first names in the dataset (24 May, 2016).
 
 Mean gender probabilities were determined using bootstrap analysis, excluding names for which no gender information was available (~26.6\% of authors). Error bars represent 95\% confidence intervals. Code and further explanation can be found on github [15].
 
-Author positions were assigned based on the number of total authors. In papers with 5 or more authors, all authors besides first, second, last and penultimate were designated “other.” Papers with 3 authors were assigned only first, second and last, and papers with two authors were assigned only first and last.
+Author positions were assigned based on the number of total authors. In papers with 5 or more authors, all authors besides first, second, last and penultimate were designated “other.” Papers with 3 authors were assigned only first, second and last, papers with two authors were assigned only first and last, and single-author papers were assigned only first.
 
 \section*{Figures}
 \begin{figure}[!h]
